Traiding Album card

--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -59,54 +59,44 @@
                     <div class="list-group-item">
                         <h4 class="text-title">Группа товаров:</h4>
                         <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scroll">
-                            @* @foreach (var category in Model.FilterViewModel.Categories)
-                                {
+                            @foreach (var category in Model.FilterViewModel.Categories)
+                            {
                                 <div class="checkbox">
-                                <label>
-                                @if (Model.FilterViewModel.SelectedCategories.ToList().Contains(int.Parse(category.Value)))
-                                {
-                                <input type="checkbox" name="CategoriesId" value="@category.Value"
-                                checked>@category.Text
-                                }
-                                else
-                                {
-                                <input type="checkbox" name="CategoriesId" value="@category.Value">@category.Text
-                                }
-                                </label>
+                                    <label>
+                                        @if (Model.FilterViewModel.SelectedCategories.ToList().Contains(int.Parse(category.Value)))
+                                        {
+                                            <input type="checkbox" name="CategoriesId" value="@category.Value"
+                                                   checked>@category.Text
+                                            }
+                                            else
+                                            {
+                                                <input type="checkbox" name="CategoriesId" value="@category.Value">@category.Text
+                                            }
+                                    </label>
                                 </div>
-                                } *@
+                            }
                         </div>
                     </div>
                     <div class="list-group-item">
-                        <h4 class="text-title">Безопасная сделка:</h4>
+                        <h4 class="text-title">Цена:</h4>
                         <div id="cost">
                             <div class="text-number d-inline">
                                 <label>
-                                    @* <input class="numbers" name="CostFrom" type="number" min="0" step="any"
-                                        value="@Model.FilterViewModel.IsApprovedAnnouncements" /> *@
+                                    от <input class="numbers" name="CostFrom" type="number" min="0" step="any"
+                                              value="@Model.FilterViewModel.SelectedCostForm" />
+                                </label>
+                            </div>
+                            <div class="text-number d-inline">
+                                <label>
+                                    до <input class="numbers" name="CostTo" type="number" min="0" step="any"
+                                              value="@Model.FilterViewModel.SelectedCostTo" />
                                 </label>
                             </div>
                         </div>
-                        <div class="list-group-item">
-                            <h4 class="text-title">Цена:</h4>
-                            <div id="cost">
-                                <div class="text-number d-inline">
-                                    <label>
-                                        от <input class="numbers" name="CostFrom" type="number" min="0" step="any"
-                                            value="@Model.FilterViewModel.SelectedCostForm" />
-                                    </label>
-                                </div>
-                                <div class="text-number d-inline">
-                                    <label>
-                                        до <input class="numbers" name="CostTo" type="number" min="0" step="any"
-                                            value="@Model.FilterViewModel.SelectedCostTo" />
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="list-group-item">
-                            <input class="btn btn-filter" type="submit" value="Применить фильтр">
-                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <input class="btn btn-filter" type="submit" value="Применить фильтр">
+                    </div>
                 </form>
                 <div class="list-group-item">
                     <h4 class="text-title">Сортировки:</h4>
@@ -116,6 +106,10 @@
                             <input type="text" name="sortOrder" value="@(Model.SortViewModel.NameSort)" hidden>
                             <input type="number" name="CostFrom" value="@Model.FilterViewModel.SelectedCostForm" hidden>
                             <input type="number" name="CostTo" value="@Model.FilterViewModel.SelectedCostTo" hidden>
+                            @foreach (var category in Model.FilterViewModel.SelectedCategories)
+                            {
+                                <input type="number" name="CategoriesId" value="@category" hidden>
+                            }
                             <input type="submit" class="btn btn-filter" value="По алфавиту">
                         </form>
 
@@ -123,72 +117,120 @@
                             <input type="text" name="sortOrder" value="@(Model.SortViewModel.CostSort)" hidden>
                             <input type="number" name="CostFrom" value="@Model.FilterViewModel.SelectedCostForm" hidden>
                             <input type="number" name="CostTo" value="@Model.FilterViewModel.SelectedCostTo" hidden>
-                            
+                            @foreach (var category in Model.FilterViewModel.SelectedCategories)
+                            {
+                                <input type="number" name="CategoriesId" value="@category" hidden>
+                            }
                             <input type="submit" class="btn btn-filter" value="По Цене">
                         </form>
+                    </div>
+                </div>
+                <div class="list-group-item">
+                    <div class="">
+                        <a asp-action="Index" asp-controller="Traiding" class="btn btn-filter">Отмена</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="content">
-        <table class="table">
-            @foreach (var product in Model.Products)
-            {
-                <tr>
-                    <td>
-                        @* @Html.Raw("<img style='width:250px; height:250px;' src=\"data:image/jpeg;base64,"
-                    + Convert.ToBase64String(product.ProductPictures.GetPreviewPicture().Result) + "\" />") *@
-                    <h4>Картинка объявления</h4>
-                    </td>
-                    <td>
-                        @product.ProductName
-                        @product.Cost
-                        @product.ProductCategory.Name
+        
+        <div class="albums">
+            <div class="album">
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                   
+                        @foreach (var product in Model.Products)
+                        {
+                            
+                            <div class="col">
+                                <div class="card text-center shadow-sm">
+                                    <a asp-action="Details" asp-controller="Traiding" asp-route-id="@product.Id">
+                                        <div class="img-cover">
+                                            @Html.Raw("<img class=\"card-img card-img-top\"' src=\"data:image/jpeg;base64,"
+                                            + Convert.ToBase64String(product.ProductPictures.GetPreviewPicture().Result) + "\" />")
+                                        </div>
+                                    </a>
+                                    
+                                    <div class="card-body">
+                                        <h5 class="card-title">@product.ProductName</h5>
+                                        <h6 class="card-subtitle text-muted">@product.ProductCategory.Name</h6>
+                                        <h4 class="card-price">@product.Cost<br><small class="card-price-cost text-muted">руб.коп.</small></h4>
+                                        <form asp-controller="Orders" asp-action="Add" method="POST">
+                                        <input type="number" name="productId" value="@product.Id" hidden>
 
-                        <a asp-action="Details" asp-route-id="@product.Id">Просмотр</a>
-                    </td>
-                    <td>
-                        <form asp-controller="Orders" asp-action="Add" method="POST">
-                            <input type="number" name="productId" value="@product.Id" hidden>
+                                        <input type="submit" class="btn" name="add-to-order" value="Добавить в корзину">
+                                    </form>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        }
 
-                            <input type="submit" name="add-to-order" value="Добавить в корзину">
-                        </form>
-                    </td>
-                </tr>
-            }
-        </table>
+                    
+                        
 
-        @if (Model.PageViewModel.HasPreviousPage)
-        {
-            <form asp-action="Index">
-                <input type="text" name="page" value="@(Model.PageViewModel.PageNumber - 1)" hidden>
-                <input type="text" name="sortOrder" value="@(Model.SortViewModel.Current)" hidden>
-                <input type="number" name="CostFrom" value="@Model.FilterViewModel.SelectedCostForm" hidden>
-                <input type="number" name="CostTo" value="@Model.FilterViewModel.SelectedCostTo" hidden>
-                @foreach (var category in Model.FilterViewModel.SelectedCategories)
-                {
-                    <input type="number" name="CategoriesId" value="@category" hidden>
-                }
-                <input type="submit" class="glyphicon glyphicon-chevron-left" value="Предыдущая">
-            </form>
-        }
-        <p>@Model.PageViewModel.PageNumber</p>
-        @if (Model.PageViewModel.HasNextPage)
-        {
-            <form asp-action="Index">
-                <input type="text" name="page" value="@(Model.PageViewModel.PageNumber + 1)" hidden>
-                <input type="text" name="sortOrder" value="@(Model.SortViewModel.Current)" hidden>
-                <input type="number" name="CostFrom" value="@Model.FilterViewModel.SelectedCostForm" hidden>
-                <input type="number" name="CostTo" value="@Model.FilterViewModel.SelectedCostTo" hidden>
-                @foreach (var category in Model.FilterViewModel.SelectedCategories)
-                {
-                    <input type="number" name="CategoriesId" value="@category" hidden>
-                }
-                <input type="submit" class="glyphicon glyphicon-chevron-left" value="Следющая">
-            </form>
-        }
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+       
+        <div class="pagination-container">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item-text page-item">
+                        @if (Model.PageViewModel.HasPreviousPage)
+                        {
+                            <form asp-action="Index">
+                                <input type="text" name="page" value="@(Model.PageViewModel.PageNumber - 1)" hidden>
+                                <input type="text" name="sortOrder" value="@(Model.SortViewModel.Current)" hidden>
+                                <input type="number" name="CostFrom" value="@Model.FilterViewModel.SelectedCostForm" hidden>
+                                <input type="number" name="CostTo" value="@Model.FilterViewModel.SelectedCostTo" hidden>
+                                            @foreach (var category in Model.FilterViewModel.SelectedCategories)
+                                            {
+                                    <input type="number" name="CategoriesId" value="@category" hidden>
+                                            }
+                                <input type="submit" class="page-link glyphicon glyphicon-chevron-left" value="Предыдущая">
+                            </form>
+                        }
+                        else
+                        {
+                            <input type="submit" class="page-link page-linl-disabled glyphicon glyphicon-chevron-left" disabled value="Предыдущая">
+                        }
+                    </li>
+                    <li class="page-item"><p class="page-link"> @Model.PageViewModel.PageNumber</p></li>
+                    <li class="page-item-text page-item">
+                        @if (Model.PageViewModel.HasNextPage)
+                        {
+                            <form asp-action="Index">
+                                <input type="text" name="page" value="@(Model.PageViewModel.PageNumber + 1)" hidden>
+                                <input type="text" name="sortOrder" value="@(Model.SortViewModel.Current)" hidden>
+                                <input type="number" name="CostFrom" value="@Model.FilterViewModel.SelectedCostForm" hidden>
+                                <input type="number" name="CostTo" value="@Model.FilterViewModel.SelectedCostTo" hidden>
+                                @foreach (var category in Model.FilterViewModel.SelectedCategories)
+                                {
+                                    <input type="number" name="CategoriesId" value="@category" hidden>
+                                }
+                                <input type="submit" class=" page-link glyphicon glyphicon-chevron-left" value="Следющая">
+                            </form>
+                        }
+                        else{
+                            <input type="submit" class="page-linl-disabled page-link  glyphicon glyphicon-chevron-left" disabled value="Следющая">
+                        }
+                    </li>
+                </ul>
+            </nav>
+
+            
+           
+            
+        </div>
     </div>
 
 
+    
+
 </section>
+
