--- a/CosmeticShop/CosmeticShop/wwwroot/css/CardProduct.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/CardProduct.css
@@ -40,9 +40,14 @@ body .card-group .card:last-child{
     height: auto;
     padding-right: 0px;
 }
-body  .card-group .card .card-img{
+body .card-group .card .img-body{
     width: 288px;
     height: 360.44px;
+}
+body  .card-group .card .img-body .card-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 8px !important;
 }
 body .card-group .card .card-body .card-title{
@@ -60,9 +65,9 @@ body .card-group .card .card-body .card-title{
 }
 body .card-group .card .card-body .card-subtitle{
     margin-top: 6px;
-    padding: 0px 96px 0px 96px;
+    /* padding: 0px 96px 0px 96px; */
 
-    font-family: 'Raleway', sans-serif;;
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
