--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
           фундамента, доступного как в матовой, так и в светяной отделке.
         </p>
       </div>
-      <a href="#" class="btn">Перейти к коллекции <img src="~/image/arrow.png" alt="arrow"></a>
+      <a  asp-action="Index" asp-controller="Traiding" class="btn">Перейти в магазин</a>
     </div>
     <div class="image-container">
       <!-- <div></div> -->
