Order Details Index html +css

--- a/CosmeticShop/CosmeticShop/Views/Orders/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Orders/Index.cshtml
@@ -47,7 +47,7 @@
     <h2>Корзина</h2>
     <div class="container-order back-blur">
 
-        <table class="table-order ">
+        <table class="table-order-index ">
             @foreach (var accounting in Model.OrderProuctAccountings)
             {
                 <tr>
