--- a/CosmeticShop/CosmeticShop/Views/Orders/OrderHistory.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Orders/OrderHistory.cshtml
@@ -17,3 +17,66 @@
         <hr>
     }
 }
+
+
+
+<section class="ordering-container">
+    <table class="table-ordering">
+        <tr>
+            <td class="total-element">
+                <div class="total">
+                    <h3 class="text-center">Итого</h3>
+                    <div class="sroll-product">
+                            <table class="table-product ">
+                            
+                            @foreach (var order in Model.Orders)
+                                {
+                                    @foreach (var opa  in order.OrderProuctAccountings)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <div class="order">
+                                                    <div class="img-cover">
+                                                        @Html.Raw("<img class=\"card-img card-img-top\"' src=\"data:image/jpeg;base64,"
+                                                    +
+                                                    Convert.ToBase64String(opa.ProductContainer.ProductPictures.GetPreviewPicture().Result)
+                                                    + "\" />")
+
+                                                    </div>
+
+                                                </div>
+
+                                            </td>
+                                            <td>
+                                                <div class="text-title-product-name">
+                                                    <p>@opa.ProductContainer.ProductName</p>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="text-title-cost">
+
+                                                    @{
+                                                        var summaryCost = opa.ProductContainer.Cost * opa.CountRequiredProducts;
+                                                    }
+                                                    <p>@summaryCost
+                                                        <br>
+                                                        <small class="text-center">руб.коп.</small>
+                                                    </p>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="text-counter">
+                                                    Количество: @opa.CountRequiredProducts
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    }
+                                }
+                            </table>
+
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
+</section>
