--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="~/css/Roles.css" />
     <link rel="stylesheet" href="~/css/AccountLogReg.css" />
     <link rel="stylesheet" href="~/css/Orders.css" />
+    <link rel="stylesheet" href="~/css/ProductDetails.css" />
+    <link rel="stylesheet" href="~/css/OrderOrdering.css" />
 
     <link rel="stylesheet" href="~/css/LayoutHeader.css" />
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
