--- a/CosmeticShop/CosmeticShop/wwwroot/css/OrdersHistory.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/OrdersHistory.css
@@ -1,20 +1,17 @@
-body .table-ordering{
+body .table-order-history{
     margin: 10px 100px;
 }
-body .ordering-history{
-    margin: 10px 100px;
+body .total-element-history {
+    width: 100%;
 }
-body .total-element {
-    width: auto;
-}
-body .total-element .total{
+body .total-element-history .total{
     padding: 40px;
     border-radius: 8px;
     background: rgba(214, 204, 195, 0.2);
     border: 1.5px solid rgba(39, 20, 3, 0.5);
 }
 
-body .total-element .total h3{
+body .total-element-history .total h3{
     font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
@@ -27,10 +24,6 @@ body .total-element .total h3{
     /* Текст */
 
     color: rgba(61, 29, 0, 0.9)
-}
-body .total-element .total .sroll-product{
-    overflow: auto;
-    height: 500px;
 }
 
 
@@ -126,18 +119,18 @@ body .table-product .text-counter{
     font-size: 14px;
 }
 
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .btn-form-group {
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .btn-form-group {
 
     text-align: center;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .btn-form-group .btn-outline-pink{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .btn-form-group .btn-outline-pink{
     padding: 10px 45px;
     border-radius: 30px;
     color: #9F3D4B;
     border: 1px solid #9F3D4B;
     text-align: center;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .btn-form-group .btn-outline-pink:hover{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .btn-form-group .btn-outline-pink:hover{
     color: #FFF8F4;
     background-color: #9F3D4B;
     
@@ -146,11 +139,11 @@ body .table-ordering .ordering-element .form-ordering .container-ordering-form .
 /* form */
 
 
-body .table-ordering .ordering-element {
+body .table-order-history .ordering-element {
     width: 700px;
     padding: 20px;
 }
-body .table-ordering .ordering-element .form-ordering h3{
+body .table-order-history .ordering-element .form-ordering h3{
     font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
@@ -159,25 +152,25 @@ body .table-ordering .ordering-element .form-ordering h3{
     margin-bottom: 20px;
     color: rgba(61, 29, 0, 0.9);
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form {
+body .table-order-history .ordering-element .form-ordering .container-ordering-form {
     margin-bottom: 20px;
     width: 500px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container {
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container {
     width: 500px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group{
     margin-bottom: 10px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group:last-child{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group:last-child{
     margin-bottom: 0px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .text-lable{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .text-lable{
     font-size: 16px;
     line-height: 33px;
     margin-bottom: -2px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .text-lable-pick{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .text-lable-pick{
     font-size: 16px;
     line-height: 33px;
     margin-bottom: -2px;
@@ -190,7 +183,7 @@ body .table-ordering .ordering-element .form-ordering .container-ordering-form .
     height: auto;
     
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .form-input{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .form-input{
     font-size: 12px;
     color: rgba(39, 20, 3, 0.7);
     background: rgba(214, 204, 195, 0.2);
@@ -199,7 +192,7 @@ body .table-ordering .ordering-element .form-ordering .container-ordering-form .
     border-radius: 12px;
     padding-right: 10px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .form-select{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form .data-personal-container .form-group .form-select{
     font-size: 16px;
     color: rgba(39, 20, 3, 0.7);
     background: rgba(214, 204, 195, 0.2);
@@ -210,10 +203,10 @@ body .table-ordering .ordering-element .form-ordering .container-ordering-form .
 
     margin-bottom: 25px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form #delivery-data-container{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form #delivery-data-container{
     margin-top: 20px;
 }
-body .table-ordering .ordering-element .form-ordering .container-ordering-form #delivery-data-container h4{
+body .table-order-history .ordering-element .form-ordering .container-ordering-form #delivery-data-container h4{
     margin-bottom: 15px;
     font-family: Crimson Text;
     font-style: normal;
