--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Delete.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+@* 
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -11,53 +11,106 @@
     <h4>ProductContainer</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CountProducts)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CountProducts)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ProductName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cost)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cost)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CreateDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CreateDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ExpirationDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ExpirationDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ProductCategory)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ProductCategory.Name)
         </dd class>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-</div>
+</div> *@
+
+
+<section class="order-product-element">
+    <h2 class="text-center"> Удаление товар</h2>
+    <h4 class="text-center mb-5">Вы действительно хотетите удалить товар?</h4>
+    <table class="order-product-container mt-5">
+        <tr>
+            <td>
+                <div class="text-container">
+                    <h2 class="text-title">@Html.DisplayFor(model => model.ProductName)</h2>
+                    <hr>
+                    <h6 class="text-collection">@Html.DisplayFor(model => model.ProductCategory.Name)</h6>
+                    <div class="text-content">
+                        <h5 class="text-cost">@Html.DisplayFor(model => model.Cost)<span>руб.коп.</span></h5>
+                        <h5 class="title-discrip">Описание товара</h5>
+                        <p class="discription">
+                            @Html.DisplayFor(model => model.Description)
+                        </p>
+                        <div class="date-product">
+                            @Html.DisplayFor(model => model.CreateDate)
+                            @Html.DisplayFor(model => model.ExpirationDate)
+                        </div>
+
+                    </div>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="product-cat-btn">
+                    <form asp-action="Delete">
+
+                        <div class="form-group d-inline mr-5 ml-5">
+                            <a asp-action="Index" class="btn btn-outline-primary">Вернуться назад</a>
+                        </div>
+                        <div class="form-group d-inline">
+                            <input type="hidden" asp-for="Id" />
+                            <input type="submit" value="Удалить" class="btn btn-danger" />
+                        </div>
+
+                    </form>
+
+                    @* <form asp-action="Delete">
+                        <input type="hidden" asp-for="Id" />
+                        <input type="submit" value="Delete" class="btn btn-danger" /> |
+                        <a asp-action="Index">Back to List</a>
+                    </form> *@
+                </div>
+            </td>
+        </tr>
+    </table>
+
+</section>
