--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="~/css/Orders.css" />
     <link rel="stylesheet" href="~/css/ProductDetails.css" />
     <link rel="stylesheet" href="~/css/OrderOrdering.css" />
+    <link rel="stylesheet" href="~/css/OrdersHistory.css" />
 
     <link rel="stylesheet" href="~/css/LayoutHeader.css" />
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
