--- a/CosmeticShop/CosmeticShop/Views/Account/ForgotPassword.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Account/ForgotPassword.cshtml
@@ -25,7 +25,7 @@
 
 <section class="create-product-container container-myself-info">
 
-    <h2>@ViewData["Title"]</h2>
+    <h2 class="text-center">@ViewData["Title"]</h2>
     <div class="container-prosuct">
 
         <div class="row">
@@ -33,7 +33,7 @@
 
                 <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal">
                     <h4>Введите email.</h4>
-                    <hr />
+                    <hr/>
                     @* <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Email" class="col-md-2 control-label"></label>
