AboutUs Contacts Payment

--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="~/css/OrderOrdering.css" />
     <link rel="stylesheet" href="~/css/OrdersHistory.css" />
 
+    <link rel="stylesheet" href="~/css/Payment.css"/>
+
     <link rel="stylesheet" href="~/css/LayoutHeader.css" />
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
     <link rel="stylesheet" href="~/css/LayoutFooter.css" />
@@ -50,8 +52,8 @@
                             asp-action="Index">Магазин</a>
                         <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">Доставка и
                             Оплата</a>
-                        <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">Контакты</a>
-                        <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">О нас</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="Contacts">Контакты</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="AboutUs">О нас</a>
 
                     </div>
                     <div class="navbar-second navbar-nav  justify-content-end">
