--- a/CosmeticShop/CosmeticShop/Views/ProductCategories/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductCategories/Create.cshtml
@@ -34,7 +34,7 @@
                             <a asp-action="Index" class="input-back">Вернуться назад</a>
                         </div>
                         <div class="form-group d-inline">
-                            <input type="submit" value="Добавить категорию" class="btn-create btn" />
+                            <input type="submit" value="Добавить категорию" class="btn btn-create" />
 
                         </div>
                     </div>
