--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CosmeticShop</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 
     
     <link rel="stylesheet" href="~/css/ProductContainersIndex.css" />
@@ -22,6 +21,8 @@
     <link rel="stylesheet" href="~/css/ProductDetails.css" />
     <link rel="stylesheet" href="~/css/OrderOrdering.css" />
     <link rel="stylesheet" href="~/css/OrdersHistory.css" />
+    <link rel="stylesheet" href="~/css/Contact.css" />
+    <link rel="stylesheet" href="~/css/AboutUs.css" />
 
     <link rel="stylesheet" href="~/css/Payment.css"/>
 
@@ -29,7 +30,9 @@
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
     <link rel="stylesheet" href="~/css/LayoutFooter.css" />
     
-
+    
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">    
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 
 <body>
@@ -50,10 +53,8 @@
                             asp-action="Index">Главная</a>
                         <a class="nav-item nav-link active" asp-area="" asp-controller="Traiding"
                             asp-action="Index">Магазин</a>
-                        <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">Доставка и
-                            Оплата</a>
                         <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="Contacts">Контакты</a>
-                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="AboutUs">О нас</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="AboutUs">Поддержка</a>
 
                     </div>
                     <div class="navbar-second navbar-nav  justify-content-end">
@@ -200,8 +201,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <p class="copyright-text">&copy;2021 Create by Einherjar - <a asp-area="" asp-controller="Home"
-                            asp-action="Privacy" class="privacyFooter">Пользовательское соглашение</a></p>
+                    <p class="copyright-text">&copy;2021 Create by Einherjar</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-12">
