--- a/CosmeticShop/CosmeticShop/wwwroot/css/LayoutBody.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/LayoutBody.css
@@ -41,8 +41,15 @@ body {
     background: rgba(214, 204, 195, 0.2)
 }
 
-.btn-danger, .btn-outline-primary, .btn-outline-danger, .btn-success, .btn-outline-warning, .btn-outline-info, .btn-outline-success, .btn-info, .btn-warning {
-    padding: 10px 35px;
-    border-radius: 30px;
+.btn-danger, .btn-outline-primary, .btn-outline-danger, .btn-success, .btn-outline-warning, .btn-outline-info, .btn-outline-success, .btn-info, .btn-warning, .btn-create {
+    padding: 10px 35px !important;
+    border-radius: 30px !important;
+}
+
+.btn-create{
+    background-color: #A93E4D !important;
+    color: #fff !important;
+    font-size: 16px ;
+    font-weight: 500;
 }
 
